--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/webserv",
-			"args": ["2", "1", "5", "3"],
+			"args": ["./config/basic.conf"],
 			"stopAtEntry": true,
 			"cwd": ".",
 			"environment": [],
