feat: Server class + addPort function (working in progress) + header 'defines' to stores all headers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/webserv",
-			"args": ["./config/wrong.conf"],
+			"args": ["./config/basic.conf"],
 			"stopAtEntry": true,
 			"cwd": ".",
 			"environment": [],
