--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,11 +1,11 @@
 server {
-	listen 1025
+	listen = 1025
 }
 
 server {
-	listen 4242
+	listen = 3232
 }
 
 server {
-	listen 8080
+	listen = 8787
 }
