feat: multi route in server config - ok

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,11 +1,9 @@
 server {
-	listen = 1025
-}
-
-server {
-	listen = 3232
-}
-
-server {
-	listen = 8787
+	listen = 1026
+	route {
+		autoindex = on
+	}
+	route{
+		autoindex = off
+	}
 }
