feat: route fill finished (I hope)

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,9 +1,12 @@
 server {
 	listen = 1026
-	route {
-		autoindex = on
+
+	route cgi{ # esse cgi do route não altera nada, serve mais para especificar do que o route se trata
+		root = /cgi
+		index = random_file.py 
 	}
-	route{
-		autoindex = off
+
+	route redirect{
+		redirect = https//random_url
 	}
 }
