fix: alterado para 120 linhas de formatacao e corrigido debug.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/webserv",
-            "args": ["./config/basic.conf"],
+            "args": ["config/basic.conf"],
             "preLaunchTask": "make re",
             "cwd": "${workspaceFolder}",
-            "stopAtEntry": true,
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
