feat: startServer working in progress

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,12 +1,7 @@
 server {
 	listen = 1026
+}
 
-	route cgi{ # esse cgi do route não altera nada, serve mais para especificar do que o route se trata
-		root = /cgi
-		index = random_file.py 
-	}
-
-	route redirect{
-		redirect = https//random_url
-	}
+server {
+	listen = 1026
 }
