--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,33 +1,28 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        
-        {
-            "name": "Launch with GDB",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/webserv",
-            "args": ["./config/basic.conf"],
-            "preLaunchTask": "make re",
-            "cwd": "${workspaceFolder}",
-            "stopAtEntry": true,
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "logging": {
-                "engineLogging": true,
-                "trace": true,
-                "traceResponse": true
-            },
-            "internalConsoleOptions": "openOnSessionStart"
-        }
-    ]
+	"configurations": [
+	{
+		"name": "(gdb) Launch",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/webserv",
+		"args": ["./config/basic.conf"],
+		"stopAtEntry": false,
+		"cwd": "${workspaceFolder}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			},
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+		]
+	}
+	]
 }
