--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,7 +1,7 @@
 server {
 	listen = 1026
 
-	route cgi{ # esse cgi do route não altera nada, serve mais para especificar do que o route se trata
+	route cgi{
 		root = /cgi
 		index = random_file.py 
 	}
