--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -53,19 +53,72 @@ server {
 
     # Redirecionamento HTTP
     route /old-page {
-        return = 301 /new-page;
+        return = 301 /new-page
     }
 
     route /new-page {
-        root = /var/www/html;
+        root = /var/www/html
     }
 
     # Configurações adicionais
     route /images {
         # Diretório para arquivos de imagem
-        root = /var/www/images;
+        root = /var/www/images
 
         # Listagem de diretórios desativada
-        autoindex = off;
+        autoindex = off
+    }
+},
+server {
+    # Porta e endereço do servidor
+    listen = 8080
+    server_name = teste
+
+    # Raiz dos documentos
+    root = /var/www/html
+
+    # Páginas de erro padrão
+    error_page = 404 /errors/404_2.html
+    error_page = 500 /errors/500_2.html
+    error_page = 502 /errors/502_2.html
+
+    # Tamanho máximo do corpo do cliente em bytes
+    client_max_body_size = 4mb
+
+    # Configurações de rota
+    route / {
+        # Métodos HTTP aceitos
+        allow_methods = GET
+
+        # Diretório raiz para esta rota
+        root = /var/www/html
+
+        # Arquivo padrão se a requisição for para um diretório
+        index = index.py
+
+        cgi = on
+    }
+},
+server {
+    # Porta e endereço do servidor
+    listen = 3388
+    server_name = server_tres
+
+    # Raiz dos documentos
+    root = /var/www/tres
+
+    # Tamanho máximo do corpo do cliente em bytes
+    client_max_body_size = 1mb
+
+    # Configurações de rota
+    route / {
+        # Métodos HTTP aceitos
+        allow_methods = GET POST
+
+        # Diretório raiz para esta rota
+        root = /var/www/tres/aqui
+
+        # Arquivo padrão se a requisição for para um diretório
+        index = index.html
     }
 }
