--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/webserv",
-            "args": ["config/basic.conf"],
+            "args": ["config/advanced.conf"],
             "preLaunchTask": "make re",
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -23,7 +23,7 @@
             ],
             "logging": {
                 "engineLogging": true,
-                "trace": true,
+                // "trace": true,
                 "traceResponse": true
             },
             "internalConsoleOptions": "openOnSessionStart"
