style: alterações sem relação ao código.

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -3,7 +3,7 @@
 # Configurações do servidor
 server {
     # Porta e endereço do servidor
-    listen = 80
+    listen = 8080
     server_name = localhost
 
     # Raiz dos documentos
@@ -60,6 +60,10 @@ server {
         root = /var/www/html
     }
 
+    route redirect{
+		redirect = https//random_url
+	}
+
     # Configurações adicionais
     route /images {
         # Diretório para arquivos de imagem
@@ -71,7 +75,7 @@ server {
 },
 server {
     # Porta e endereço do servidor
-    listen = 8080
+    listen = 8081
     server_name = teste
 
     # Raiz dos documentos
