--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,14 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "Launch with GDB",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/webserv",
-            "args": ["config/advanced.conf"],
+            "args": [
+                "config/advanced.conf"
+            ],
             "preLaunchTask": "make re",
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -19,6 +20,10 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
+                },
+                {
+                    "description": "Disable loading of shared library symbols",
+                    "text": "set auto-solib-add off"
                 }
             ],
             "logging": {
