comecar a implementar response

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,17 @@
 		"map": "cpp",
 		"cstring": "cpp",
 		"set": "cpp",
-		"unordered_map": "cpp"
+		"unordered_map": "cpp",
+		"bitset": "cpp",
+		"chrono": "cpp",
+		"condition_variable": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"future": "cpp",
+		"mutex": "cpp",
+		"semaphore": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"variant": "cpp"
 	}
 }
