--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,36 +1,28 @@
 {
 	"configurations": [
-		{
-			"name": "Launch with GDB",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/webserv",
-			"args": [
-				"config/basic.conf"
-			],
-			"preLaunchTask": "make re",
-			"cwd": "${workspaceFolder}",
-			"environment": [],
-			"externalConsole": false,
-			"MIMode": "gdb",
-			"miDebuggerPath": "/usr/bin/gdb",
-			"setupCommands": [
-				{
-					"description": "Enable pretty-printing for gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				},
-				{
-					"description": "Disable loading of shared library symbols",
-					"text": "set auto-solib-add off"
-				}
-			],
-			"logging": {
-				"engineLogging": true,
-				// "trace": true,
-				"traceResponse": true
+	{
+		"name": "(gdb) Launch",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/webserv",
+		"args": ["config/basic.conf"],
+		"stopAtEntry": false,
+		"cwd": "${workspaceFolder}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
 			},
-			// "internalConsoleOptions": "openOnSessionStart"
-		}
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+		]
+	}
 	]
 }
