fix(Request): aplica fix-request nesse branch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,13 +57,25 @@
 		"cstring": "cpp",
 		"set": "cpp",
 		"unordered_map": "cpp",
-    	"liveshare.joinDebugSessionOption": "Prompt",
-    	"liveshare.allowGuestTaskControl": true,
-    	"liveshare.alwaysFollowHost": true,
-    	"liveshare.featureSet": "insiders",
-    	"liveshare.languages.allowGuestCommandControl": true,
-    	"liveshare.showReadOnlyUsersInEditor": "always",
-    	"liveshare.autoShareTerminals": true,
-    	"liveshare.allowGuestDebugControl": true,
+		"liveshare.joinDebugSessionOption": "Prompt",
+		"liveshare.allowGuestTaskControl": true,
+		"liveshare.alwaysFollowHost": true,
+		"liveshare.featureSet": "insiders",
+		"liveshare.languages.allowGuestCommandControl": true,
+		"liveshare.showReadOnlyUsersInEditor": "always",
+		"liveshare.autoShareTerminals": true,
+		"liveshare.allowGuestDebugControl": true,
+		"bitset": "cpp",
+		"chrono": "cpp",
+		"codecvt": "cpp",
+		"condition_variable": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"future": "cpp",
+		"mutex": "cpp",
+		"semaphore": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"variant": "cpp"
 	}
 }
