feat: added function at response part: setResponseBody, setContentLength, verifyPermission refactor: change local attributes to private attributes (Reponse class) fix: Create the Client class to manage the association between clientFd and serverFd, and use it in the Request class feat: execution of files at setResponseBody feat: building environment variables at CGI - working in progress docs: startServer, acceptNewConnection and loadPoll are now documented

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,6 +1,11 @@
 server {
 	listen = 1026
 
+}
+
+server {
+	listen = 1027
+	server_name = server 1027
 	route /aqui{
 		root = /cgi
 		index = random_file.py 
@@ -8,5 +13,6 @@ server {
 }
 
 server {
-	listen = 1027
+	listen = 1028
+	server_name = server 1028
 }
