fix: bug do request, agora todas as paginas, html, css, js e imagem aparecem com GET feat: response builder feat: content.html, a pagina para fazermos upload e deletar arquivos
Co-authored-by: Renan Batista <rbatista@resutec.com.br>

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -68,6 +68,16 @@ server {
         # Listagem de diretórios desativada
         autoindex = off
     }
+
+    route /files {
+        # Diretório para arquivos de imagem
+        root = /content/files
+
+        # Listagem de diretórios desativada
+        autoindex = on
+
+        allow_methods = POST DELETE        
+    }
 },
 server {
     # Porta e endereço do servidor
