--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -131,4 +131,12 @@ server {
         # Arquivo padrão se a requisição for para um diretório
         index = index.html
     }
-}
+
+    route /delete {
+        # Métodos HTTP aceitos
+        allow_methods = DELETE
+
+        # Diretório raiz para esta rota
+        root = /content/uploads/teste_delete.delete
+    }
+}   
