--- a/config/basic.conf
+++ b/config/basic.conf
@@ -14,4 +14,12 @@ server {
 server {
 	listen = 1028
 	server_name = server 1028
+
+	route /delete {
+		# Métodos HTTP aceitos
+		allow_methods = DELETE
+
+		# Diretório raiz para esta rota
+		root = /content/uploads
+    }
 }
