--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,11 @@
 		"args": ["config/basic.conf"],
 		"stopAtEntry": false,
 		"cwd": "${workspaceFolder}",
+		"preLaunchTask": "make re",
 		"environment": [],
 		"externalConsole": false,
 		"MIMode": "gdb",
+		"miDebuggerPath": "/usr/bin/gdb",
 		"setupCommands": [
 			{
 				"description": "Enable pretty-printing for gdb",
@@ -21,6 +23,10 @@
 				"description": "Set Disassembly Flavor to Intel",
 				"text": "-gdb-set disassembly-flavor intel",
 				"ignoreFailures": true
+			},
+			{
+				"description": "Disable loading of shared library symbols",
+				"text": "set auto-solib-add off"
 			}
 		]
 	}
