feat: cgi agora funciona tanto com php tanto com python, adicionado sinais \n fix: servers e pollfds agora são globais para limpá-los

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -5,9 +5,9 @@ server {
 server {
 	listen = 1027
 	server_name = server 1027
-	route /aqui {
+	route /cgi {
 		root = /cgi
-		index = random_file.py 
+		index = hello.php
 	}
 }
 
