Fix: CGI now works as root and accesses the file path Fix: Script current-time.py file Feat: New scripts - CGI Feat: Beta version of AutoIndex - needs defaultFilePath refactored and functional to work 100% Fix: Segmentation fault due to incorrect exception in Route Create and Server Create Feat: Added function checkAutoIndexinRoute, which analyzes every route of the server to check if the autoIndex flag is true or false. This needs to be replicated to other attributes of Route

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,18 +1,17 @@
 server {
 	listen = 1029
+	route /cgi {
+		root = /cgi
+		index = current-time.py
+	}
 }
 
 server {
 	listen = 1027
 	server_name = server 1027
-	route /cgi {
-		root = /cgi
-		index = hello.php
-	}
-	
-	route /cgi {
-		root = /cgi
-		index = infinity.py
+	route / {
+		root = /
+		autoindex = true
 	}	
 }
 
