feat: adicionado verificação de rotas duplicadas, considerando somente a primeira.

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,6 +4,16 @@ server {
 		root = /cgi
 		index = current-time.py
 	}
+
+	route /kaka {
+		root = /cgi
+		index = current-time.py
+	}
+
+	route /cgi {
+		root = /cgi
+		index = current-time.py
+	}
 }
 
 server {
