--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,11 @@
 		"args": ["config/basic.conf"],
 		"stopAtEntry": false,
 		"cwd": "${workspaceFolder}",
+		"preLaunchTask": "make re",
 		"environment": [],
 		"externalConsole": false,
 		"MIMode": "gdb",
+		"miDebuggerPath": "/usr/bin/gdb",
 		"setupCommands": [
 			{
 				"description": "Enable pretty-printing for gdb",
@@ -23,7 +25,8 @@
 				"ignoreFailures": true
 			},
 			{
-				"text": "set follow-fork-mode child"
+				"description": "Disable loading of shared library symbols",
+				"text": "set auto-solib-add off"
 			}
 		]
 	}
