fix: CGI now works perfectly. Autoindex needs adjustments in findMatchingRoute to work.

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -22,7 +22,11 @@ server {
 	route / {
 		root = /
 		autoindex = true
-	}	
+	}
+	route /cgi {
+		root = /cgi
+		index = current-time.py
+	}
 }
 
 server {
