fix: CGI and Autoindex works bug: fd blocking when access localhost:1027/cgi and localhost:1029/cgi

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,17 +1,12 @@
 server {
 	listen = 1029
 	route /cgi {
-		root = /cgi
+		root = /content/cgi
 		index = current-time.py
 	}
 
 	route /kaka {
-		root = /cgi
-		index = current-time.py
-	}
-
-	route /cgi {
-		root = /cgi
+		root = /content/cgi
 		index = current-time.py
 	}
 }
@@ -19,8 +14,8 @@ server {
 server {
 	listen = 1027
 	server_name = server 1027
-	route / {
-		root = /
+	route /css {
+		root = /content/css
 		autoindex = true
 	}
 	route /cgi {
