--- a/config/basic.conf
+++ b/config/basic.conf
@@ -4,10 +4,8 @@ server {
 		root = /content/cgi
 		index = current-time.py
 	}
-
-	route /kaka {
-		root = /content/cgi
-		index = current-time.py
+	route /redirect {
+		redirect = https://profile.intra.42.fr/
 	}
 }
 
