--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,28 +1,25 @@
 server {
 	listen = 1029
 	route /cgi {
-		root = /cgi
+		root = /content/cgi
 		index = current-time.py
 	}
-
-	route /kaka {
-		root = /cgi
-		index = current-time.py
-	}
-
-	route /cgi {
-		root = /cgi
-		index = current-time.py
+	route /redirect {
+		redirect = https://profile.intra.42.fr/
 	}
 }
 
 server {
 	listen = 1027
 	server_name = server 1027
-	route / {
-		root = /
+	route /css {
+		root = /content/css
 		autoindex = true
-	}	
+	}
+	route /cgi {
+		root = /cgi
+		index = current-time.py
+	}
 }
 
 server {
