fix: adicionado novamente o arquivo de teste que foi retirado nao sei quando. fix: alterado configurações para arquivo avançado que contempla todas as funçẽs do webserver.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 		"type": "cppdbg",
 		"request": "launch",
 		"program": "${workspaceFolder}/webserv",
-		"args": ["config/basic.conf"],
+		"args": ["config/advanced.conf"],
 		"stopAtEntry": false,
 		"cwd": "${workspaceFolder}",
 		"preLaunchTask": "make re",
