--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -6,9 +6,6 @@ server {
     listen = 8080
     server_name = localhost
 
-    # Raiz dos documentos
-    root = /var/www/html
-
     # Páginas de erro padrão
     error_page = 404 /errors/404.html;
     error_page = 500 /errors/500.html;
@@ -17,16 +14,31 @@ server {
     # Tamanho máximo do corpo do cliente em bytes
     client_max_body_size = 1024k
 
-    # Configurações de rota
-    route / {
+    route /index {
         # Métodos HTTP aceitos
         allow_methods = GET POST
 
         # Diretório raiz para esta rota
-        root = /var/www/html;
+        root = /images
 
         # Arquivo padrão se a requisição for para um diretório
-        index = index.html;
+        index = index.html
+
+        autoindex = on
+    }
+
+    # Configurações de rota
+    route /index {
+        # Métodos HTTP aceitos
+        allow_methods = GET POST
+
+        # Diretório raiz para esta rota
+        root = /images
+
+        # Arquivo padrão se a requisição for para um diretório
+        index = index.html
+
+        autoindex = on
     }
 
     route /uploads {
@@ -40,18 +52,29 @@ server {
         autoindex = on
     }
 
-    route /cgi-bin {
+    route /cgi {
         # Métodos HTTP aceitos
         allow_methods = GET POST
 
         # Diretório dos scripts CGI
-        root = /usr/lib/cgi-bin
+        root = /tudoDiferente
 
         # Executar CGI baseado na extensão do arquivo
-        cgi = on
+        cgi = off
     }
 
-    # Redirecionamento HTTP
+    route /cgi_error {
+        # Métodos HTTP aceitos
+        allow_methods = GET POST
+
+        # Diretório dos scripts CGI
+        root = /cgi
+
+        # Executar CGI baseado na extensão do arquivo
+        # cgi = on
+    }
+
+    # Redireck, ionamento HTTP
     route /old-page {
         return = 301 /new-page
     }
