--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,8 +1,10 @@
 server {
-	listen = 1029
+	listen = 1031
 	route /cgi {
-		root = /content/cgi
+		root = /cgi
 		index = current-time.py
+		allow_methods = GET POST DELETE
+		cgi = on
 	}
 	route /redirect {
 		redirect = https://profile.intra.42.fr/
@@ -12,13 +14,11 @@ server {
 server {
 	listen = 1027
 	server_name = server 1027
+
 	route /css {
 		root = /content/css
+		allow_methods = POST
 		autoindex = true
-	}
-	route /cgi {
-		root = /cgi
-		index = current-time.py
 	}
 }
 
