fix: errors do merge

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -16,7 +16,7 @@ server {
 	server_name = server 1027
 
 	route /css {
-		root = /content/css
+		root = /css
 		allow_methods = POST
 		autoindex = true
 	}
