fix: defineFilePath volta ao que era antes do ultimo merge.

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -45,7 +45,7 @@ server {
         # Métodos HTTP aceitos
         allow_methods = POST
 
-        # Diretório onde os arquivos serão salvos
+        # Dir8080etório onde os arquivos serão salvos
         root = /var/www/uploads
 
         # Permitir listagem de diretórios
@@ -54,14 +54,17 @@ server {
 
     route /cgi {
         # Métodos HTTP aceitos
-        allow_methods = GET POST
+        allow_methods = GET POST DELETE
 
         # Diretório dos scripts CGI
-        root = /tudoDiferente
+        root = /cgi
 
         # Executar CGI baseado na extensão do arquivo
-        cgi = off
-    }
+        cgi = on
+
+        #  Default pages
+        index = current-time.py
+	}
 
     route /cgi_error {
         # Métodos HTTP aceitos
