fix: adicionado getServer que foi retirado no Merge e estava gerando erro no código. fix: alterado cliente para suportar rota /index mas ainda faltam tratamentos.

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -14,7 +14,7 @@ server {
     # Tamanho máximo do corpo do cliente em bytes
     client_max_body_size = 1024k
 
-    route /index {
+    route / {
         # Métodos HTTP aceitos
         allow_methods = GET POST
 
@@ -28,7 +28,7 @@ server {
     }
 
     # Configurações de rota
-    route /index {
+    route /home {
         # Métodos HTTP aceitos
         allow_methods = GET POST
 
