feat: adicionado pagina em branco para teste de estresse.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,12 @@
         {
             "label": "make re",
             "type": "shell",
-            "command": "make re",
+            "command": "make",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
             "problemMatcher": ["$gcc"]
-        }
+        },
     ]
 }
