--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -7,24 +7,22 @@ server {
     server_name = localhost
 
     # Páginas de erro padrão
-    error_page = 404 /errors/404.html;
-    error_page = 500 /errors/500.html;
-    error_page = 502 /errors/502.html;
+    error_page = 404 /errors/404.html
+    error_page = 405 /errors/405.html
+    error_page = 502 /errors/502.html
 
     # Tamanho máximo do corpo do cliente em bytes
     client_max_body_size = 1024k
 
     route / {
-        # Métodos HTTP aceitos
-        allow_methods = GET POST
 
         # Diretório raiz para esta rota
-        root = /images
+        # root = /images
 
         # Arquivo padrão se a requisição for para um diretório
         index = index.html
 
-        autoindex = on
+        # autoindex = on
     }
 
     # Configurações de rota
@@ -100,14 +98,14 @@ server {
         root = /content/files
 
         # Listagem de diretórios desativada
-        autoindex = on
+        autoindex = off
 
         allow_methods = POST DELETE        
     }
 },
 server {
     # Porta e endereço do servidor
-    listen = 8081
+    listen = 1032
     server_name = teste
 
     # Raiz dos documentos
@@ -126,13 +124,8 @@ server {
         # Métodos HTTP aceitos
         allow_methods = GET
 
-        # Diretório raiz para esta rota
-        root = /var/www/html
-
         # Arquivo padrão se a requisição for para um diretório
-        index = index.py
-
-        cgi = on
+        index = index.html
     }
 },
 server {
@@ -165,4 +158,29 @@ server {
         # Diretório raiz para esta rota
         root = /content/uploads/teste_delete.delete
     }
-}   
+},
+
+server {
+    # Porta e endereço do servidor
+    listen = 1050
+    server_name = localhost
+
+    # Páginas de erro padrão
+    error_page = 404 /errors/404.html
+    error_page = 405 /errors/fucker.html
+    error_page = 502 /errors/502.html
+
+    # Tamanho máximo do corpo do cliente em bytes
+    client_max_body_size = 1024k
+
+    route / {
+
+        # Diretório raiz para esta rota
+        # root = /images
+
+        # Arquivo padrão se a requisição for para um diretório
+        index = index.html
+
+        # autoindex = on
+    }
+}
