--- a/config/basic.conf
+++ b/config/basic.conf
@@ -1,5 +1,10 @@
 server {
 	listen = 1031
+
+    error_page = 404 /errors/fucker.html
+    error_page = 500 /errors/500.html
+    error_page = 502 /errors/502.html
+
 	route /cgi {
 		root = /cgi
 		index = current-time.py
@@ -13,13 +18,6 @@ server {
 
 server {
 	listen = 1027
-	server_name = server 1027
-
-	route /css {
-		root = /css
-		allow_methods = POST
-		autoindex = true
-	}
 }
 
 server {
