--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -3,12 +3,12 @@
 # Configurações do servidor
 server {
     # Porta e endereço do servidor
-    listen = 8080
+    listen = 1027
     server_name = localhost
 
     # Páginas de erro padrão
     error_page = 404 /errors/404.html
-    error_page = 405 /errors/405.html
+    error_page = 405 /errors/fucker.html
     error_page = 502 /errors/502.html
 
     # Tamanho máximo do corpo do cliente em bytes
@@ -21,6 +21,7 @@ server {
 
         # Arquivo padrão se a requisição for para um diretório
         index = index.html
+        # allow_methods = GET POST
 
         # autoindex = on
     }
