fix: alterado paginas de erro para incluir css.

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -19,10 +19,10 @@ server {
         allow_methods = GET POST
 
         # Diretório raiz para esta rota
-        root = /images
+        root = /cgi
 
         # Arquivo padrão se a requisição for para um diretório
-        index = index.html
+        index = server-info.php
 
         autoindex = on
     }
