feat: error-page check

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -7,9 +7,9 @@ server {
     server_name = localhost
 
     # Páginas de erro padrão
-    error_page = 404 /errors/404.html
-    error_page = 405 /errors/fucker.html
-    error_page = 502 /errors/502.html
+    error_page = 404 /page-errors/404.html
+    error_page = 405 /page-errors/405.html
+    error_page = 502 /page-errors/502.html
 
     # Tamanho máximo do corpo do cliente em bytes
     client_max_body_size = 1024k
