style: só config

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -25,20 +25,23 @@ server {
         index = server-info.php
 
         autoindex = on
+
+        cgi = on
+        
     }
 
     # Configurações de rota
-    route /home {
+    route /home/aqui/la {
         # Métodos HTTP aceitos
         allow_methods = GET POST
 
         # Diretório raiz para esta rota
-        root = /images
+        root = /cgi
 
         # Arquivo padrão se a requisição for para um diretório
-        index = index.html
+        index = server-info.php
 
-        autoindex = on
+        cgi = on
     }
 
     route /uploads {
