--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -90,12 +90,25 @@ server {
     }
 
     # Configurações adicionais
-    route /images {
+    route /autoIndex {
         # Diretório para arquivos de imagem
-        root = /var/www/images
+        root = /
 
+        allow_methods = GET POST
+
+        # index = index.html
         # Listagem de diretórios desativada
-        autoindex = off
+        autoindex = on
+    }
+
+    # Configurações adicionais
+    route /autoIndex/images {
+        # Diretório para arquivos de imagem
+        root = /images
+
+        allow_methods = GET POST
+        # Listagem de diretórios desativada
+        autoindex = on
     }
 
     route /files {
