fix: corrigido acesso aos arquivos.

--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -15,27 +15,35 @@ server {
     client_max_body_size = 1024k
 
     route / {
-
-        # Diretório raiz para esta rota
-<<<<<<< HEAD
-        # root = /images
-
-        # Arquivo padrão se a requisição for para um diretório
+       # Arquivo padrão se a requisição for para um diretório
         index = index.html
-        # allow_methods = GET POST
+
+        allow_methods = GET POST
 
         # autoindex = on
-=======
-        root = /cgi
-
-        # Arquivo padrão se a requisição for para um diretório
-        index = server-info.php
+        root = /
 
         autoindex = on
 
         cgi = on
+    }
+
+    route /css {
+        allow_methods = GET
         
->>>>>>> master
+        root = /css
+    }
+
+    route /js {
+        allow_methods = GET
+        
+        root = /js
+    }
+
+    route /images {
+        allow_methods = GET
+        
+        root = /images
     }
 
     # Configurações de rota
