fix: corrigido acesso a imagens.

--- a/config/basic.conf
+++ b/config/basic.conf
@@ -17,9 +17,6 @@ server {
 }
 
 server {
-<<<<<<< HEAD
-	listen = 1027
-=======
 	listen = 1029
 	server_name = server 1027
 
@@ -31,8 +28,7 @@ server {
 	route /cgi {
 		root = /cgi
 		cgi = on
-	}
->>>>>>> master
+	}master
 }
 
 server {
