--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -18,14 +18,11 @@ server {
        # Arquivo padrão se a requisição for para um diretório
         index = index.html
 
+        # metodos permitidos
         allow_methods = GET POST
 
-        # autoindex = on
+        # diretorio padrao
         root = /
-
-        autoindex = on
-
-        cgi = on
     }
 
     route /css {
@@ -60,51 +57,6 @@ server {
         cgi = on
     }
 
-    route /uploads {
-        # Métodos HTTP aceitos
-        allow_methods = POST
-
-        # Dir8080etório onde os arquivos serão salvos
-        root = /var/www/uploads
-
-        # Permitir listagem de diretórios
-        autoindex = on
-    }
-
-    route /cgi {
-        # Métodos HTTP aceitos
-        allow_methods = GET POST DELETE
-
-        # Diretório dos scripts CGI
-        root = /cgi
-
-        # Executar CGI baseado na extensão do arquivo
-        cgi = on
-
-        #  Default pages
-        index = current-time.py
-	}
-
-    route /cgi_error {
-        # Métodos HTTP aceitos
-        allow_methods = GET POST
-
-        # Diretório dos scripts CGI
-        root = /cgi
-
-        # Executar CGI baseado na extensão do arquivo
-        # cgi = on
-    }
-
-    # Redireck, ionamento HTTP
-    route /old-page {
-        return = 301 /new-page
-    }
-
-    route /new-page {
-        root = /var/www/html
-    }
-
     # Configurações adicionais
     route /autoIndex {
         # Diretório para arquivos de imagem
@@ -117,25 +69,44 @@ server {
         autoindex = on
     }
 
-    # Configurações adicionais
     route /autoIndex/images {
         # Diretório para arquivos de imagem
         root = /images
 
         allow_methods = GET POST
+
+        # index = index.html
         # Listagem de diretórios desativada
         autoindex = on
     }
 
     route /files {
         # Diretório para arquivos de imagem
-        root = /content/files
+        root = /files
 
         # Listagem de diretórios desativada
         autoindex = off
 
         allow_methods = POST DELETE        
     }
+
+    route /cgi {
+        # Diretório para arquivos de imagem
+        root = /cgi
+
+        # Listagem de diretórios desativada
+        autoindex = off
+
+        cgi = on
+        
+        allow_methods = POST DELETE        
+    }
+
+    route /redirect {
+		redirect = https://profile.intra.42.fr/
+
+        allow_methods = GET
+	}
 },
 server {
     # Porta e endereço do servidor
