--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -6,13 +6,15 @@ server {
     listen = 1027
     server_name = localhost
 
+	root = /content
+
     # Páginas de erro padrão
     error_page = 404 /page-errors/404.html
     error_page = 405 /page-errors/405.html
     error_page = 502 /page-errors/502.html
 
     # Tamanho máximo do corpo do cliente em bytes
-    client_max_body_size = 1024k
+    client_max_body_size = 4024k
 
     route / {
        # Arquivo padrão se a requisição for para um diretório
@@ -62,10 +64,10 @@ server {
 
     route /uploads {
         # Métodos HTTP aceitos
-        allow_methods = POST
+        allow_methods = POST DELETE
 
         # Dir8080etório onde os arquivos serão salvos
-        root = /var/www/uploads
+        root = /uploads
 
         # Permitir listagem de diretórios
         autoindex = on
