--- a/config/advanced.conf
+++ b/config/advanced.conf
@@ -146,62 +146,6 @@ server {
         allow_methods = GET
 	}
 },
-server {
-    # Porta e endereço do servidor
-    listen = 1032
-    server_name = teste
-
-    # Raiz dos documentos
-    root = /var/www/html
-
-    # Páginas de erro padrão
-    error_page = 404 /errors/404_2.html
-    error_page = 500 /errors/500_2.html
-    error_page = 502 /errors/502_2.html
-
-    # Tamanho máximo do corpo do cliente em bytes
-    client_max_body_size = 4mb
-
-    # Configurações de rota
-    route / {
-        # Métodos HTTP aceitos
-        allow_methods = GET
-
-        # Arquivo padrão se a requisição for para um diretório
-        index = index.html
-    }
-},
-server {
-    # Porta e endereço do servidor
-    listen = 3388
-    server_name = server_tres
-
-    # Raiz dos documentos
-    root = /var/www/tres
-
-    # Tamanho máximo do corpo do cliente em bytes
-    client_max_body_size = 1mb
-
-    # Configurações de rota
-    route / {
-        # Métodos HTTP aceitos
-        allow_methods = GET POST
-
-        # Diretório raiz para esta rota
-        root = /var/www/tres/aqui
-
-        # Arquivo padrão se a requisição for para um diretório
-        index = index.html
-    }
-
-    route /delete {
-        # Métodos HTTP aceitos
-        allow_methods = DELETE
-
-        # Diretório raiz para esta rota
-        root = /content/uploads/teste_delete.delete
-    }
-},
 
 server {
     # Porta e endereço do servidor
@@ -210,20 +154,38 @@ server {
 
     # Páginas de erro padrão
     error_page = 404 /errors/404.html
-    error_page = 405 /errors/fucker.html
+    error_page = 405 /errors/lalalaa.html
     error_page = 502 /errors/502.html
 
     # Tamanho máximo do corpo do cliente em bytes
     client_max_body_size = 1024k
 
     route / {
-
-        # Diretório raiz para esta rota
-        # root = /images
-
-        # Arquivo padrão se a requisição for para um diretório
+       # Arquivo padrão se a requisição for para um diretório
         index = index.html
 
-        # autoindex = on
+        # metodos permitidos
+        allow_methods = GET POST
+
+        # diretorio padrao
+        root = /
+    }
+
+    route /css {
+        allow_methods = GET
+        
+        root = /css
+    }
+
+    route /js {
+        allow_methods = GET
+        
+        root = /js
+    }
+
+    route /images {
+        allow_methods = GET
+        
+        root = /images
     }
 }
